--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -46,7 +46,7 @@
             color: white;
             font-size: 1.5em;
             text-decoration: none;
-            animation: gradient-text 10s infinite, fadeInDown 1s;;
+            animation: gradient-text 10s infinite, fadeInDown 1s;
 
             &:hover {
                 text-decoration: underline;
